--- a/src/index.css
+++ b/src/index.css
@@ -93,7 +93,7 @@
 html, body, #root {
   height: 100%;
   width: 100%;
-  overflow: hidden;
+  overflow: clip;
 }
 
 body {
